[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h1-miba"
version = "0.1.0"
description = "Hackathon MIBA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["/"]